--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend API for HNG internship task",
   "main": "index.js",
   "scripts": {
-    "app": "nodemon index.js",
+    "start": "nodemon index.js",
     "test": "./node_modules/mocha/bin/mocha --exit"
   },
   "repository": {
